Summary: | ASTERISK-25485: res_pjsip_outbound_registration: registration stops due to 400 response | ||
Reporter: | Kevin Harwell (kharwell) | Labels: | |
Date Opened: | 2015-10-21 11:34:38 | Date Closed: | 2015-10-23 15:37:57 |
Priority: | Minor | Regression? | No |
Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_registration |
Versions: | 13.6.0 | Frequency of Occurrence | Frequent |
Related Issues: | |||
Environment: | Attachments: | ||
Description: | When Asterisk sends outbound registrations to a registrar, due to possible problems with the registrar it will sometimes send back a 400 thus Asterisk ceases registration for the given endpoint.
There is already an option 'forbidden_retry_interval' that allows outbound registration retries when a 403 is received. Add a similar option that allows registration to continue for any fatal permanent response that is received. | ||
Comments: |